# TodoList

./: .gitignore  alembic.ini  database.db  pyproject.toml  tst.py
fastapi_project/: config.py  database.py  main.py
fastapi_project/routers/: task.py  todo.py  users.py
fastapi_project/tests/: conftest.py  tests.py
fastapi_project/utils/: fake_db.py
migrations/: env.py
migrations/versions/: 38de5287962d_initial_migration.py  75d54fab2967_initial_commit.py  8f14ee79acd8_initial_migration.py
