[tool.poetry]
name = "fastapi_project"
version = "0.1.0"
description = ""
authors = ["Aliaksei Yafremau <447654972g@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlmodel = "^0.0.22"
uvicorn = "^0.32.0"
pyjwt = "^2.9.0"
passlib = "^1.7.4"
python-dotenv = "^1.0.1"
bcrypt = "^4.2.0"
alembic = "^1.14.0"
python-jose = "^3.3.0"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
