[tool.poetry]
name = "fastapi_project"
version = "0.1.0"
description = ""
authors = ["Aliaksei Yafremau <447654972g@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
sqlmodel = "^0.0.22"
uvicorn = "^0.32.0"
pyjwt = "^2.9.0"
passlib = "^1.7.4"
python-dotenv = "^1.0.1"
bcrypt = "^4.2.0"
alembic = "^1.14.0"
python-jose = "^3.3.0"
psycopg2-binary = "^2.9.10"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
trio = "^0.27.0"
anyio = "^4.6.2.post1"
pytest-asyncio = "^0.24.0"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.6.1"
faker = "^33.0.0"


[tool.pytest.ini_options]
asyncio_mode='auto'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
